@@ -1,14 +1,7 @@
 v1.2
 	switching between user profiles (sonata --profile foo)
-	button to save all tagged files
 	don't allow vert resize when collapsed
 	clean up on_infowindow_show
-	playlist saving (0.13 only)
-		current tab:
-			- save... >
-				new playlist...
-				to existing playlist... ---> popup window with dropdown of playlists
-				...
 	
 Future:
 	lyrics -> allow user to edit, fetch, refresh, search terms..?
@@ -25,4 +18,9 @@ Future:
 		playlist tab:
 			ability to view songs, reorder songs, remove songs, etc
 	use GtkVolumeButton?
-	reduce python dependencies...
+	playlist saving (0.13 only)
+		current tab:
+			- save... >
+				new playlist...
+				to existing playlist... ---> popup window with dropdown of playlists
+				...
